fix modal info win style on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -385,14 +385,19 @@ button {
   top:46px;
   display: none;
   z-index: 10;
-  height:calc(100% - 46px);
+  height:calc(100vh - 46px);
   width:100%;
+  overflow: hidden;
 }
 
 .info-container {
   background: #141414;
   height: 100%;
   justify-content: space-between;
+  overflow: scroll;
+}
+
+.info-track {
 }
 
 .info-text {
@@ -412,7 +417,7 @@ button {
 .info-auth {
   position: relative;
   flex-grow: 1;
-  margin-top: 60px;
+  margin: 60px 0;
 }
 
 .info-logo_wrap {
@@ -485,6 +490,18 @@ button[type=log] {
 @media (min-width:991px){.info-win{margin-right:auto;}}
 
 @media (min-width:991px){.info-win{margin-left:auto;}}
+
+@media (max-width:991px){.info-container{padding-right:1em;}}
+
+@media (max-width:991px){.info-container{width:100%;}}
+
+@media (min-width:991px){.info-track{display:flex;}}
+
+@media (min-width:991px){.info-track{flex-direction:column;}}
+
+@media (min-width:991px){.info-track{height:100%;}}
+
+@media (min-width:991px){.info-track{justify-content:space-between;}}
 
 @media (min-width:991px){.info-text{padding:0;}}
 
