--- a/src/styles/info.css
+++ b/src/styles/info.css
@@ -3,18 +3,29 @@
   top: 46px @(min-width: $tabletLandscapeUp) 0px;
   display: none;
   z-index: 10;
-  height: calc(100% - 46px) @(min-width: $tabletLandscapeUp) 100%;
+  height: calc(100vh - 46px) @(min-width: $tabletLandscapeUp) 100%;
   width: 100% @(min-width: $tabletLandscapeUp) 940px;
   right: @(min-width: $tabletLandscapeUp) 0;
   left: @(min-width: $tabletLandscapeUp) 0;
   margin-right: @(min-width: $tabletLandscapeUp) auto;
   margin-left: @(min-width: $tabletLandscapeUp) auto;
+  overflow: hidden;
 }
 
 .info-container {
   background: $darkGray;
   height: 100%;
   justify-content: space-between;
+  overflow: scroll;
+  padding-right: @(max-width: $tabletLandscapeUp) 1em;
+  width: @(max-width: $tabletLandscapeUp) 100%;
+}
+
+.info-track {
+  display: @(min-width: $tabletLandscapeUp) flex;
+  flex-direction: @(min-width: $tabletLandscapeUp) column;
+  height: @(min-width: $tabletLandscapeUp) 100%;
+  justify-content: @(min-width: $tabletLandscapeUp) space-between;
 }
 
 .info-text {
@@ -36,7 +47,7 @@
   position: relative;
   display: @(min-width: $tabletLandscapeUp) none;
   flex-grow: 1;
-  margin-top: 60px;
+  margin: 60px 0;
 }
 
 .info-logo {
